--- a/services.html
+++ b/services.html
@@ -32,15 +32,15 @@
  table{
      width: auto;
  }
-.content-table {
+/* .content-table {
   border-collapse: collapse;
-  /* margin: 25px 0; */
+  margin: 25px 0;
   font-size: 0.9em;
   min-width: 380px;
   border-radius: 5px 5px 0 0;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
+} */
 
 .content-table thead tr {
   background-color: #009879;
