--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="navbar-brand" href="#">
                 <img class="logo" src = './assets/logo.png' />
                 <div class="logo-text">
-                    <span class="font-ribeye logo-text-ecom">e-com</span><br/>
+                    <span class="font-saira logo-text-ecom">e-com</span><br/>
                     <span class="font-saira logo-text-seller">SELLERS' HUB</span>
                 </div>
             </a>
@@ -394,7 +394,7 @@
                         <div class="gap-25"></div>
                         <div class="gap-25"></div>
                         <div class="text-align-center font-saira" style="font-size: 24px;">
-                            <a href="tel:8173388093" style="color:inherit;text-decoration: none;">+91 8173388093</a>
+                            <a href="tel:8273388093" style="color:inherit;text-decoration: none;">+91 8273388093</a>
                             <br/>
                             <a href="tel:8954463528" style="color:inherit;text-decoration: none;">+91 8954463528</a>
                         </div>
