--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="navbar-brand" href="#">
                 <img class="logo" src = './assets/logo.png' />
                 <div class="logo-text">
-                    <span class="font-saira logo-text-seller" style="color:#F5FF81">e-com</span><br/>
+                    <span class="font-saira logo-text-seller" style="color:#F5FF81">E-com</span><br/>
                     <span class="font-saira logo-text-seller">SELLERS' HUB</span>
                 </div>
             </a>
@@ -437,7 +437,7 @@
                 <div class="footer-about-logo">
                     <img class="footer-logo" src = './assets/logo.png' />
                     <div class="logo-text">
-                        <span class="font-ribeye logo-text-ecom logo-text-ecom-footer">e-com</span><br/>
+                        <span class="font-saira logo-text-seller" style="color:#F5FF81">E-com</span><br/>
                         <span class="font-saira logo-text-seller logo-text-seller-footer">SELLERS' HUB</span>
                     </div>
                 </div>
