--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img class="logo" src = './assets/logo.png' />
                 <div class="logo-text">
                     <span class="font-saira logo-text-seller" style="color:#F5FF81">E-com</span><br/>
-                    <span class="font-saira logo-text-seller">SELLERS' HUB</span>
+                    <span class="font-saira logo-text-seller">Sellers' hub</span>
                 </div>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -438,7 +438,7 @@
                     <img class="footer-logo" src = './assets/logo.png' />
                     <div class="logo-text">
                         <span class="font-saira logo-text-seller" style="color:#F5FF81">E-com</span><br/>
-                        <span class="font-saira logo-text-seller logo-text-seller-footer">SELLERS' HUB</span>
+                        <span class="font-saira logo-text-seller logo-text-seller-footer">Sellers' hub</span>
                     </div>
                 </div>
                 <div class="gap-75"></div>
